[gd_scene load_steps=16 format=3 uid="uid://bdfibu0m26jlr"]

[ext_resource type="PackedScene" uid="uid://60skjbgmc10j" path="res://scenes/components/header/header_timer.tscn" id="1_2f27a"]
[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_760rq"]
[ext_resource type="AudioStream" uid="uid://brodeh5wnuxdt" path="res://assets/sounds/buzzer.wav" id="2_tdxv8"]
[ext_resource type="Texture2D" uid="uid://dr36vsqls8ix2" path="res://assets/design/circle.png" id="2_y6uao"]
[ext_resource type="Texture2D" uid="uid://ctlh6yt8qespd" path="res://assets/design/progress_bar_background2.png" id="3_1m7fn"]
[ext_resource type="Texture2D" uid="uid://dwvxdfp3bacqq" path="res://assets/design/retry_button.png" id="3_yy2ma"]
[ext_resource type="PackedScene" uid="uid://d4n6jh717hsw" path="res://scenes/components/audio_visualizer/audio_visualizer.tscn" id="4_5447e"]
[ext_resource type="Texture2D" uid="uid://b7oulqvpprf8p" path="res://assets/design/retry_button_disabled.png" id="4_ic1o1"]
[ext_resource type="Texture2D" uid="uid://c1safw3j6p4u7" path="res://assets/design/progress_bar_forground_green.png" id="4_p8637"]
[ext_resource type="Texture2D" uid="uid://da5egnfnvey7h" path="res://assets/design/guess_button.png" id="4_qvyka"]
[ext_resource type="Texture2D" uid="uid://bn6g5khtv8u58" path="res://assets/design/skip_button.png" id="5_b5wom"]
[ext_resource type="Script" path="res://scenes/components/volume_slider/volume_slider.gd" id="7_571q2"]
[ext_resource type="Texture2D" uid="uid://c0up44067ta8g" path="res://assets/design/guess_button_disabled.png" id="11_r2ksr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xkxqa"]
content_margin_top = 30.0
texture = ExtResource("3_1m7fn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mxmrk"]
texture = ExtResource("4_p8637")

[node name="Game" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_760rq")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = &"Music"

[node name="BuzzerAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_tdxv8")

[node name="HeaderTimer" parent="." instance=ExtResource("1_2f27a")]
layout_mode = 2

[node name="GameScreen" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="GameScreen"]
layout_mode = 2

[node name="RoundInfoContainer" type="HBoxContainer" parent="GameScreen/VBoxContainer"]
layout_mode = 2

[node name="Active PlayerLabel" type="Label" parent="GameScreen/VBoxContainer/RoundInfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.596078, 0.788235, 0.501961, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Player 1"

[node name="ActiveRoundLabel" type="Label" parent="GameScreen/VBoxContainer/RoundInfoContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Round 5"
horizontal_alignment = 1

[node name="ScoreInfoContainer" type="HBoxContainer" parent="GameScreen/VBoxContainer"]
layout_mode = 2

[node name="PlayerScoreLabel" type="Label" parent="GameScreen/VBoxContainer/ScoreInfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.596078, 0.788235, 0.501961, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Score "

[node name="ScoreMultiplerLabel" type="Label" parent="GameScreen/VBoxContainer/ScoreInfoContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "x2"
horizontal_alignment = 1

[node name="AudioVisualizerContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 21

[node name="AudioVisualizer" parent="AudioVisualizerContainer" instance=ExtResource("4_5447e")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Footer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Footer"]
layout_mode = 2
size_flags_vertical = 8

[node name="MessageLabel" type="Label" parent="Footer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.596078, 0.788235, 0.501961, 1)
theme_override_font_sizes/font_size = 24
text = "downloading..."

[node name="MarginContainer" type="MarginContainer" parent="Footer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="VolumeSlider" type="HSlider" parent="Footer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 8
theme_override_icons/grabber = ExtResource("2_y6uao")
theme_override_icons/grabber_highlight = ExtResource("2_y6uao")
theme_override_styles/slider = SubResource("StyleBoxTexture_xkxqa")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_mxmrk")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_mxmrk")
min_value = -12.0
max_value = 12.0
step = 0.1
script = ExtResource("7_571q2")

[node name="ButtonMarginContainer" type="MarginContainer" parent="Footer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="ButtonContainer" type="HBoxContainer" parent="Footer/VBoxContainer/ButtonMarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="ReplaySongButton" type="TextureButton" parent="Footer/VBoxContainer/ButtonMarginContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("3_yy2ma")
texture_disabled = ExtResource("4_ic1o1")
stretch_mode = 0

[node name="GuessButton" type="TextureButton" parent="Footer/VBoxContainer/ButtonMarginContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture_normal = ExtResource("4_qvyka")
texture_disabled = ExtResource("11_r2ksr")
stretch_mode = 0

[node name="SkipButton" type="TextureButton" parent="Footer/VBoxContainer/ButtonMarginContainer/ButtonContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("5_b5wom")
stretch_mode = 0

[connection signal="time_expired" from="HeaderTimer" to="." method="_on_header_timer_time_expired"]
[connection signal="mouse_exited" from="Footer/VBoxContainer/MarginContainer/VolumeSlider" to="Footer/VBoxContainer/MarginContainer/VolumeSlider" method="_on_mouse_exited"]
[connection signal="value_changed" from="Footer/VBoxContainer/MarginContainer/VolumeSlider" to="Footer/VBoxContainer/MarginContainer/VolumeSlider" method="_on_value_changed"]
[connection signal="pressed" from="Footer/VBoxContainer/ButtonMarginContainer/ButtonContainer/ReplaySongButton" to="." method="_on_replay_song_button_pressed"]
[connection signal="pressed" from="Footer/VBoxContainer/ButtonMarginContainer/ButtonContainer/GuessButton" to="." method="_on_guess_button_pressed"]
[connection signal="pressed" from="Footer/VBoxContainer/ButtonMarginContainer/ButtonContainer/SkipButton" to="." method="_on_skip_button_pressed"]
